<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.os130004.fragmenti.RotationFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/direction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/rotate_left"
            android:layout_centerHorizontal="true"/>
        <Button
            android:id="@+id/move"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/move"/>
        <Button
            android:id="@+id/rotate_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/move"
            android:layout_above="@id/move"
            android:text="@string/rol"/>
        <Button
            android:id="@+id/rotate_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/move"
            android:layout_above="@id/move"
            android:text="@string/ror"/>
    </RelativeLayout>
</FrameLayout>
